--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/lightbox.min.js"></script>
+    <script src="js/jquery.hideseek.min.js"></script>
     <script src="js/main.js"></script>
     <script>
     lightbox.option({
