--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Picture Gallery</title>
     <link href="js/lightbox.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
   </head>
   <body>
       <div class="search">
-        <input type="search" placeholder="Search(16pt)">
+        <input id="search" type="search" placeholder="Search(16pt)">
       </div>
       <div class="wrapper">
         <div class="image">
@@ -18,7 +19,7 @@
           <a href="images/02.jpg" data-lightbox="images" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here."><img src="thumbnails/02.jpg" alt="Lake"></a>
         </div>
         <div class="image">
-          <a href="images/03.jpg" data-lightbox="images" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below." href="images/03.jpg"><img src="thumbnails/03.jpg" alt="Canyon"></a>
+          <a href="images/03.jpg" data-lightbox="images" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below."><img src="thumbnails/03.jpg" alt="Canyon"></a>
         </div>
         <div class="image">
           <a href="images/04.jpg" data-lightbox="images" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."><img src="thumbnails/04.jpg" alt="Iceberg"></a>
@@ -50,13 +51,12 @@
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/lightbox.min.js"></script>
-    <script src="js/jquery.hideseek.min.js"></script>
     <script src="js/main.js"></script>
     <script>
     lightbox.option({
       'wrapAround': true,
       'maxHeight' : 400,
     })
-</script>
+    </script>
   </body>
 </html>
